--- a/index.html
+++ b/index.html
@@ -29,29 +29,39 @@
         </div>
         <hr />
       </div>
+      <div class="row">
+        <div class="bookmarks col s12 m7">
 
-      <h3>Fill out the form to create a bookmark</h3>
+          <ul class="collection with-header" id="bookmark-list">
+            <li class="collection-header">
+              <div class="row">
+                <h3 class="col s10 push-s1">Your BookMarks</h3>
+              </div>
+            </li>
+          </ul>
 
-      <div class="form">
+        </div>
 
-        <label for="name-input">BookMark Name</label>
-        <input placeholder="Name" id="name-input" type="text">
+        <div id="create-new" class="form col s12 m5">
+          <h3>Create BookMark</h3>
 
-        <label for="url-input">URL</label>
-        <input placeholder="URL" id="url-input" type="text">
+          <label for="name-input">BookMark Name</label>
+          <input placeholder="Name" id="name-input" type="text">
 
-        <button class="btn waves-effect waves-light" id='create-bookmark-btn' type="submit" name="submitBookmark">
-          Submit<i class="material-icons right">send</i>
-        </button>
+          <label for="url-input">URL</label>
+          <input placeholder="URL" id="url-input" type="text">
+          <button class="btn waves-effect waves-light" id='create-bookmark-btn' type="submit" name="submitBookmark">
+            Submit<i class="material-icons right">send</i>
+          </button>
+
+        </div>
       </div>
 
-      <div class="bookmarks">
-        <ul class="collection with-header" id="bookmark-list">
-          <li class="collection-header"><h3>Your BookMarks</h3></li>
-        </ul>
-      </div>
+
+
     </div>
   </div>
   <script type="application/javascript" src="scripts.js"></script>
+
 </body>
 </html>
